fix: new favicon icon, add overflow to main

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ label {
 
 /* Main */
 .main {
-  margin-top: var(--header-h);
+  margin-top: var(--header-h); overflow-y: auto;
   padding: 24px 20px;
 }
 
